k8s/argocd/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    gethomepage.dev/href: 'https://argo.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Other
    gethomepage.dev/icon: argocd
    gethomepage.dev/name: ArgoCD
    gethomepage.dev/pod-selector: >-
      app.kubernetes.io/name in (
        argocd-image-updater,
        argocd-notifications-controller,
        argocd-server,
        argocd-application-controller,
        argocd-applicationset-controller,
        argocd-dex-server,
        argocd-redis,
        argocd-repo-server
      )
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: http://authelia-service.default.svc.cluster.local/api/authz/auth-request
    nginx.ingress.kubernetes.io/auth-signin: https://auth.durbin.casa?rm=$request_method
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
spec:
  ingressClassName: nginx
  tls:
    - hosts: [&host argo.durbin.casa]
      secretName: durbin-casa-wildcard-cert
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: argocd-server
                port:
                  name: https
